--- a/index.html
+++ b/index.html
@@ -4,13 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
-      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
     <title>Document</title>
   </head>
   <body>
@@ -28,18 +21,66 @@
     <main>
       <div class="card-container" id="card-container">
         <div class="card" id="card">
-          <i class="fa-sharp fa-solid fa-fire"></i>
+          <img src="img/heat-icon.png" alt="icon of fire" />
+          <h2>Heating</h2>
           <p class="card-info" id="card-info">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident
             dolorem veritatis quae. Sunt tenetur nulla quo ipsa cumque totam
             sequi consequatur eos ex omnis inventore, temporibus et. Quidem,
             minima iusto.
-            
+          </p>
+        </div>
+        <div class="card" id="card">
+          <img src="img/cool-icon.png" alt="snowflake icon" />
+          <h2>Air Conditioning</h2>
+          <p class="card-info" id="card-info">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident
+            dolorem veritatis quae. Sunt tenetur nulla quo ipsa cumque totam
+            sequi consequatur eos ex omnis inventore, temporibus et. Quidem,
+            minima iusto.
+          </p>
+        </div>
+        <div class="card" id="card">
+          <img src="img/maintenance-icon.png" alt="icon of wrench" />
+          <h2>Maintenance</h2>
+          <p class="card-info" id="card-info">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident
+            dolorem veritatis quae. Sunt tenetur nulla quo ipsa cumque totam
+            sequi consequatur eos ex omnis inventore, temporibus et. Quidem,
+            minima iusto.
+          </p>
+        </div>
+      </div>
+      <div class="about">
+        <h1>About</h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia a quasi
+          qui at quibusdam nemo est non, facere corporis reprehenderit officiis
+          consectetur ut labore assumenda quo explicabo ipsum id. Corrupti.
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsum sed
+          beatae alias officiis velit deleniti quis ipsa aut unde ut sint, esse
+          adipisci voluptas nobis iste neque, ducimus itaque cupiditate Lorem
+          ipsum dolor sit amet consectetur adipisicing elit. Enim delectus culpa
+          aliquam error soluta reiciendis eum officia exercitationem suscipit
+          optio. Hic, in nam. Suscipit illum explicabo similique ipsum atque
+          eos. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex,
+          illo beatae ipsa nam nesciunt libero unde magnam tempora recusandae
+          fugit incidunt neque nihil sequi eos, consectetur aliquam qui amet
+          totam.
+        </p>
       </div>
     </main>
 
     <footer>
-      <h1>im a footer</h1>
+      <div class="footer-phone" id="footer-phone">
+        <h1>Call Now</h1>
+        <p>555-555-5555</p>
+      </div>
+
+      <div class="footer-logo" id="footer-logo">
+        <img src="img/2.png" alt="k&k logo" />
+        <p>When Reliability Matters</p>
+      </div>
     </footer>
 
     <script src="app.js"></script>
