--- a/index.html
+++ b/index.html
@@ -7,34 +7,36 @@
     <title>Document</title>
   </head>
   <body>
-    <header>
-      <div class="navbar">
-        <img src="img/7.png" alt="" class="logo" id="logo" />
-        <ul class="nav" id="nav">
-          <li class="nav-item" id="nav-item">
-            <a href="tel:555-555-5555" class="nav-link" id="nav-link"
-              >555-555-5555</a
-            >
-          </li>
-          <li class="nav-item" id="nav-item">
-            <a href="#" class="nav-link" id="nav-link">Services</a>
-          </li>
-          <li class="nav-item" id="nav-item">
-            <a href="#" class="nav-link" id="nav-link">About</a>
-          </li>
-          <li class="nav-item" id="nav-item">
-            <a href="#" class="nav-link" id="nav-link">Contact</a>
-          </li>
-        </ul>
+    <section class="hero" id="hero">
+      <header>
+        <div class="navbar">
+          <img src="img/7.png" alt="" class="logo" id="logo" />
+          <ul class="nav" id="nav">
+            <li class="nav-item" id="nav-item">
+              <a href="tel:555-555-5555" class="nav-link" id="nav-link"
+                >555-555-5555</a
+              >
+            </li>
+            <li class="nav-item" id="nav-item">
+              <a href="#" class="nav-link" id="nav-link">Services</a>
+            </li>
+            <li class="nav-item" id="nav-item">
+              <a href="#" class="nav-link" id="nav-link">About</a>
+            </li>
+            <li class="nav-item" id="nav-item">
+              <a href="#" class="nav-link" id="nav-link">Contact</a>
+            </li>
+          </ul>
 
-        <div class="hamburger" id="hamburger">
-          <span class="bar" id="bar"></span>
-          <span class="bar" id="bar"></span>
-          <span class="bar" id="bar"></span>
+          <div class="hamburger" id="hamburger">
+            <span class="bar" id="bar"></span>
+            <span class="bar" id="bar"></span>
+            <span class="bar" id="bar"></span>
+          </div>
         </div>
-      </div>
-    </header>
-    <section class="hero" id="hero"></section>
+
+      </header>
+    </section>
 
     <main>
       <div class="card-container" id="card-container">
