--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles.css" />
-    <title>Document</title>
+    <title>K&K HVAC</title>
   </head>
   <body>
     <section class="hero" id="hero">
@@ -131,7 +131,7 @@
       </div>
 
       <div class="footer-logo" id="footer-logo">
-        <a href="/">
+        <a href="#">
           <img src="img/2.png" alt="k&k logo" />
         </a>
         <p>When Reliability Matters</p>
