hero img update edited for img quality

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <img src="img/7.png" alt="" class="logo" id="logo" />
           <ul class="nav" id="nav">
             <li class="nav-item" id="nav-item">
-              <a href="tel:555-555-5555" class="nav-link blue" id="nav-link"
+              <a href="tel:555-555-5555" class="nav-link blue tel" id="nav-link"
                 >555-555-5555</a
               >
             </li>
