--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <div class="navbar">
           <img src="img/7.png" alt="" class="logo" id="logo" />
           <ul class="nav" id="nav">
-            <li class="nav-item" id="nav-item">
-              <a href="tel:555-555-5555" class="nav-link blue tel" id="nav-link"
+            <li class="nav-item">
+              <a href="tel:555-555-5555" class="nav-link blue" id="tel"
                 >555-555-5555</a
               >
             </li>
