updated styling and removed unused images

--- a/index.html
+++ b/index.html
@@ -19,14 +19,12 @@
           <img src="img/7.png" alt="" class="logo" id="logo" />
           <ul class="nav" id="nav">
             <li class="nav-item">
-              <a href="tel:555-555-5555" class="nav-link blue" id="tel"
-                >555-555-5555</a
+              <a href="tel:262-672-3695" class="nav-link blue" id="tel"
+                >262-672-3695</a
               >
             </li>
             <li class="nav-item" id="nav-item">
-              <a href="#services" class="nav-link red" id="nav-link"
-                >Services</a
-              >
+              <a href="#services" class="nav-link red" id="nav-link">Services</a>
             </li>
             <li class="nav-item" id="nav-item">
               <a href="#about" class="nav-link blue" id="nav-link">About</a>
@@ -42,6 +40,12 @@
             <span class="bar" id="bar"></span>
           </div>
         </div>
+        <section class="hero-call">
+          <img src="img/1.png" alt="">
+          <h1>Emergencies Call Now</h1>
+          <h2><a href="tel:262-672-3695" class="nav-link blue" id="tel">262-672-3695</a></h2>
+          <p>When Reliability Matters</p>
+        </section>
       </header>
     </section>
 
@@ -102,10 +106,9 @@
             environment, especially in the unpredictable climates of the
             Midwest. That's why we are dedicated to providing unparalleled
             heating and air solutions, focusing on local quality and exceptional
-            service. Our team of highly skilled technicians not only
-            excel in their craft but also understand the unique heating and
-            cooling needs of our local residents. Our experts deliver solutions
-            you can trust.
+            service. Our team of highly skilled technicians not only excel in
+            their craft but also understand the unique heating and cooling needs
+            of our local residents. Our experts deliver solutions you can trust.
           </p>
           <iframe
             class="map"
@@ -126,7 +129,7 @@
         <p>
           We Are Here To help <br />
           Call Now <br />
-          <a href="tel:555-555-5555" class="blue">555-555-5555</a>
+          <a href="tel:262-672-3695" class="blue">262-672-3695</a>
         </p>
       </div>
 
