added meta tags

--- a/index.html
+++ b/index.html
@@ -3,6 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description"
+    content="Reliable HVAC services for
+    Southern Wisconsin and Northern Illinois with our dedicated team. From
+    efficient installations to prompt repairs, we keep your home comfortable
+    year-round. Trust our experienced technicians for top-tier heating, cooling,
+    and indoor air quality solutions. Contact us today for expert HVAC care you
+    can count on."
+    />
+    <meta property="og:title" content="K&K HVAC" />
+    <meta property="og:description" content="Reliable HVAC services for
+    Southern Wisconsin and Northern Illinois" />
+    <meta property="og:image" content="img/2.png" />
+    <meta property="og:url" content="https://kkhvac.info/" />
+    <meta property="og:type" content="website" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -16,7 +31,7 @@
     <section class="hero" id="hero">
       <header>
         <div class="navbar">
-          <img src="img/7.png" alt="" class="logo" id="logo" />
+          <img src="img/7.png" alt="k&k hvac logo" class="logo" id="logo" />
           <ul class="nav" id="nav">
             <li class="nav-item">
               <a href="tel:262-672-3695" class="nav-link blue" id="tel"
@@ -24,7 +39,9 @@
               >
             </li>
             <li class="nav-item" id="nav-item">
-              <a href="#services" class="nav-link red" id="nav-link">Services</a>
+              <a href="#services" class="nav-link red" id="nav-link"
+                >Services</a
+              >
             </li>
             <li class="nav-item" id="nav-item">
               <a href="#about" class="nav-link blue" id="nav-link">About</a>
@@ -41,9 +58,13 @@
           </div>
         </div>
         <section class="hero-call">
-          <img src="img/1.png" alt="">
+          <img src="img/1.png" alt="image of a furnace and cooling equipment" />
           <h1>Emergencies Call Now</h1>
-          <h2><a href="tel:262-672-3695" class="nav-link blue" id="tel">262-672-3695</a></h2>
+          <h2>
+            <a href="tel:262-672-3695" class="nav-link blue" id="tel"
+              >262-672-3695</a
+            >
+          </h2>
           <p>When Reliability Matters</p>
         </section>
       </header>
@@ -92,7 +113,7 @@
       <div class="about" id="about">
         <img
           src="img/3.png"
-          alt="pic that says k&k heating and air"
+          alt="picture that says k&k heating and air"
           class="about-img"
         />
         <div class="map-container">
