adjusting meta pic for facebook preview

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta property="og:title" content="K&K HVAC" />
     <meta property="og:description" content="Reliable HVAC services for
     Southern Wisconsin and Northern Illinois" />
-    <meta property="og:image" content="img/2.png" />
+    <meta property="og:image" content="img/2-og.png" />
     <meta property="og:url" content="https://kkhvac.info/" />
     <meta property="og:type" content="website" />
 
