--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description"
     content="Reliable HVAC services for
-    Southern Wisconsin and Northern Illinois with our dedicated team. From
-    efficient installations to prompt repairs, we keep your home comfortable
+    Southern Wisconsin and Northern Illinois. From
+    efficient Heating and Air Conditioning installations to prompt repairs, we keep your home comfortable
     year-round. Trust our experienced technicians for top-tier heating, cooling,
     and indoor air quality solutions. Contact us today for expert HVAC care you
     can count on."
